# hypest-api

./: .gitignore  Cargo.toml  README.md
rust/: README.md
rust/src/: main.rs
src/: database.txt  main.rs  prelude.rs  tasks.txt  utils.rs
src/db/: mod.rs
src/handlers/: login.rs  mod.rs  pictures.rs  pictures_in_area.rs  prelude.rs  sessions.rs  users.rs  utils.rs
swift/app/hypest/: AppDelegate.swift  Info.plist  ViewController.swift
swift/app/hypest.xcodeproj/: project.pbxproj
swift/app/hypest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/app/hypest.xcodeproj/project.xcworkspace/xcshareddata/: hypest.xccheckout
swift/app/hypest.xcodeproj/project.xcworkspace/xcuserdata/laurentgul.xcuserdatad/: UserInterfaceState.xcuserstate
swift/app/hypest.xcodeproj/xcuserdata/laurentgul.xcuserdatad/xcschemes/: hypest.xcscheme  xcschememanagement.plist
swift/app/hypest/Base.lproj/: LaunchScreen.xib
swift/hypest/hypest.xcodeproj/: project.pbxproj
swift/hypest/hypestTests/: Info.plist  hypestTests.swift
