[package]
name = "server"
version = "0.0.1"
authors = [ "Jhun <whkyomaro@gmail.com>" ]

[dependencies]
nickel = "0.7.0"
hyper = "*"
plugin = "*"
postgres = { version = "0.10", features = ["chrono"] }
chrono = "0.2"
serde = "*"
serde_json = "*"
serde_macros = "*"
rustc-serialize = "*"
r2d2 = "*"
r2d2_postgres = "0.9.3"

[dependencies.nickel_postgres]
git = "https://github.com/filsmick/nickel-postgres.git"
branch = "hypest-tmp-fix"
