[package]
name = "server"
version = "0.0.1"
authors = [ "Jhun <whkyomaro@gmail.com>" ]

[dependencies]
nickel = "0.7.0"
hyper = "0.6.14"
postgres = { version = "0.10", features = ["chrono"] }
chrono = "0.2.16"
serde = "0.6.0"
serde_json = "0.6.0"
serde_macros = "0.5.3"
rustc-serialize = "0.3.16"
r2d2 = "0.6.0"
r2d2_postgres = "0.9.3"
rand = "0.3.11"
byteorder = "0.3.13"
octavo = "0.1.0"
cookie = "0.2.0"

[dependencies.nickel_postgres]
git = "https://github.com/filsmick/nickel-postgres.git"
branch = "hypest-tmp-fix"

[profile.release]
debug = true
